Prevent overflow of input in to do edit dialogue

--- a/src/app/to-do-list-page/drag-drop-list/to-do-ui/to-do-editor/to-do-editor.component.css
+++ b/src/app/to-do-list-page/drag-drop-list/to-do-ui/to-do-editor/to-do-editor.component.css
@@ -1,3 +1,3 @@
 .to-do-editor-name-input {
-  width: 280px;
+  width: 100%;
 }
